<resources>
    <string name="app_name">LAT2_AKB2_10116089_MamanHeryanto</string>
    <string name="login">LOGIN</string>
    <string name="fb">CONNECT WITH FACEBOOK</string>
    <string name="or"> <b>OR</b> </string>
    <string name="zz">Doesn`t have Account?</string>
    <string name="reg">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="blod">Blood Type</string>
    <string name="reshus">Reshus</string>
    <string name="job">Job</string>
    <string name="homeadd">Home Address</string>
    <string name="loc">Default Location</string>
    <string name="term">Agree with Term and Conditions</string>
    <string name="REG">REGISTER</string>
    <string name="v_1">Almost There</string>
    <string name="v_2">Thanks you for registering with us. One More \nstep, you need to check your email \nto active your account</string>
    <string name="v_3">VERIFY</string>
    <string name="va_1">Verify your Account</string>
    <string name="va_2">We have send verification code to your email</string>
    <string name="va_3">enter verification code here ...</string>
    <string name="va_4"><b>SEND</b></string>
    <string name="va_5">Doesn`t get the code?</string>
    <string name="va_6"><b>Resend</b></string>
    <string name="b_1"><b>Maman Heryanto</b></string>
    <string name="b_2">Blood type : AB</string>
    <string name="b_3">Search Donor</string>
    <string name="b_4">Blood Needed</string>
    <string name="b_5">Message</string>
    <string name="b_6">Donor History</string>

    <string name="b_33">Search donor near you</string>
    <string name="b_44">4 User need blood </string>
    <string name="b_55">5 New Message</string>
    <string name="b_66">5 Gives, 2 Received</string>







</resources>
