<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40B4E7"
    tools:context=".verify">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:text="@string/v_1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/v_2"
        android:textColor="#8DD0F0"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="30dp"
        android:width="5dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:background="@drawable/button"
        android:text="@string/v_3" />
</RelativeLayout>