<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Blood">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:background="@drawable/ic_header_side_menu"
        android:orientation="horizontal"></LinearLayout>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_side_menu" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="37dp"
        android:layout_height="40dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_notification" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myPict"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="110dp"
        app:civ_border_width="5dp"
        app:civ_border_color="#ffffff"
        android:src="@drawable/img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="222dp">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#49B6E7"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/b_1" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/b_2"
            android:textColor="#020203"
            android:textSize="18sp"
            android:paddingBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#939597" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:paddingEnd="20dp"
            android:paddingTop="5dp"
            android:textAlignment="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="40dp"
                android:textSize="30sp"
                android:textColor="#40b4e7"
                android:text="75" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="40dp"
                android:textSize="30sp"
                android:textColor="#40b4e7"
                android:text="100" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="40dp"
                android:textSize="30sp"
                android:textColor="#40b4e7"
                android:text="330" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="30dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:text="BLOOD GIVE" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:textSize="10sp"
                android:textStyle="bold"
                android:text="BLOOD RECEIVE" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:paddingStart="20dp"
                android:textSize="10sp"
                android:text="THANKS" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#939597" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myPictblood1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginStart="50dp"
        app:civ_border_width="5dp"
        app:civ_border_color="#ffffff"
        android:src="@drawable/ic_search_donor" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myPictblood2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginStart="233dp"
        app:civ_border_width="5dp"
        app:civ_border_color="#ffffff"
        android:src="@drawable/ic_blood_needed" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="445dp"
        android:layout_marginStart="47dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/b_3" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="462dp"
        android:layout_marginStart="40dp"
        android:text="@string/b_33" />


    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="445dp"
        android:layout_marginStart="228dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/b_4" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="462dp"
        android:layout_marginStart="228dp"
        android:text="@string/b_44" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myPictblood3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="484dp"
        android:layout_marginStart="50dp"
        app:civ_border_width="5dp"
        app:civ_border_color="#ffffff"
        android:src="@drawable/ic_message" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myPictblood4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="484dp"
        android:layout_marginStart="233dp"
        app:civ_border_width="5dp"
        app:civ_border_color="#ffffff"
        android:src="@drawable/ic_donor_history" />


    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="575dp"
        android:layout_marginStart="65dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/b_5" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="575dp"
        android:layout_marginStart="235dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/b_6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="593dp"
        android:text="@string/b_55" />

    <TextView
        android:id="@+id/textView66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="593dp"
        android:layout_marginStart="233dp"
        android:text="@string/b_66" />



</RelativeLayout>